--- a/website/static/static/css/haiku.css
+++ b/website/static/static/css/haiku.css
@@ -33,7 +33,7 @@ body {
     line-height: 1.5;
     margin: auto;
     padding: 0px;
-    font-family: "DejaVu Sans", Arial, Helvetica, sans-serif;
+    font-family: "Open Sans", Arial, Helvetica, sans-serif;
     min-width: 59em;
     max-width: 70em;
     color: #4e5665;
@@ -45,6 +45,11 @@ div.footer {
     text-align: center;
     letter-spacing: 0.5px;
 }
+
+.md-header {
+    background:#666;
+}
+
 
 /* link colors and text decoration */
 
